--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "escrow"
-version = "0.0.0"
-edition = "2021"
+name = "Bitmesh-backend"
+version = "0.1.0"
+edition = "2024"
 
 [lib]
 crate-type = ["cdylib"]
