chore(deps): update dependencies and remove unused packages in Cargo.lock
- Remove unused packages: rsa, sad-rsa, base16ct, block-buffer, cmov, const-oid,
  crypto-bigint, crypto-common 0.2.0-rc.13, crypto-primes, ctutils, hybrid-array,
  pem-rfc7468, serdect, sad-rsa
- Upgrade package versions including bumpalo to 3.19.1, home to 0.5.12, libm to 0.2.16,
  js-sys to 0.3.85, rustix to 1.1.3, socket2 to 0.6.2, tempfile to 3.24.0, time to 0.3.46,
  time-core to 0.1.8, time-macros to 0.2.26, uuid to 1.20.0, wasm-bindgen to 0.2.108,
  wasm-bindgen-futures to 0.4.58, wasm-bindgen-macro to 0.2.108
- Normalize dependency version specifiers by removing explicit pre-release versions,
  e.g. digest, rand_core, sha2, hmac, signature, pkcs8
- Update checksums accordingly across updated packages
- Remove redundant version pins to improve compatibility and simplify dependency tree

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 crate-type = ["cdylib", "rlib"]
 
 [features]
-default = ["database"]
+default = ["database", "cache"]
 database = ["dep:sqlx", "dep:tokio", "dep:async-trait", "dep:uuid", "dep:chrono", "dep:serde", "dep:serde_json", "dep:tracing", "dep:tracing-subscriber", "dep:axum", "dep:tower", "dep:tower-http", "dep:regex", "dep:http"]
 cache = ["dep:redis", "dep:bb8", "dep:bb8-redis", "database"]
 
@@ -35,8 +35,6 @@ base64 = "0.21"
 anyhow = "1.0"
 thiserror = "1.0"
 regex = { version = "1.10", optional = true }
-rsa = "0.9.10"
-sad-rsa = "0.1.1"
 
 # Redis dependencies for caching
 redis = { version = "0.25", features = ["tokio-comp", "connection-manager"], optional = true }
@@ -44,7 +42,7 @@ bb8 = { version = "0.8", optional = true }
 bb8-redis = { version = "0.15", optional = true }
 
 [[bin]]
-name = "Bitmesh-backend"
+name = "Aframp-Backend"
 path = "src/main.rs"
 
 [dev-dependencies]
